# python-project-template

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.docker/: py.Dockerfile
.github/worflows/: github-ci.yml
.github/workflows/: github-ci.yml
