[project]
name = "python-app"
version = "0.1.0"
description = "Your description here"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "pyutilities-thedarknine (>=1.0.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
pytest = "^8.3.4"
black = "^25.1.0"
ruff = "^0.9.6"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=. --cov-report=html:./.tmp/coverage"
cache_dir = "./.tmp/pytest_cache"